Thu Dec 06 00:06:52 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* performance-tests/Misc/test_naming.cpp: Replaced the use of
	  ACE_WString with ACE_NS_WString as ACE_WString no longer support
	  initization using char string.

Wed Dec 05 17:13:15 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/SString.h: The concatenation oeprator needed to be
	  exported.

Wed Dec  5 19:58:42 2001  Steve Huston  <shuston@riverace.com>

        * ace/Logging_Strategy.cpp: Set the logger_key_ member to 0 (no key)
          unless/until the LOGGER flag is specified (and then the default
          key is set) or the -k option is given, which specifies a new key.
          Always passing a logger_key, even when there's no logger to be
          used, makes for some odd names in the syslog and NT Event Logs
          after the change:Sat Dec  1 19:39:22 2001  Steve Huston
          Thanks to Chris Kohlhoff for pointing this out.

Wed Dec  5 15:35:20 2001  Carlos O'Ryan  <coryan@uci.edu>

	* apps/Makefile.am:
	* docs/ACE-categories.html:
	  Removed left over references to Orbix handler.

	* apps/JAWS/remora/app/Makefile:
	* apps/JAWS/remora/app/stdmk:
	* apps/JAWS/remora/app/test.cc:
	* apps/JAWS/remora/app/remora.idl:
	* apps/JAWS/remora/app/Remora_Export.h:
	* apps/JAWS/remora/app/Remora_Export.i:
	* apps/JAWS/remora/app/Remora_Export.cc:
	* apps/JAWS/remora/app/Remora_Import.h:
	* apps/JAWS/remora/app/Remora_Import.i:
	* apps/JAWS/remora/app/Remora_Import.cc:
	  Another directory that could only compile if ORBeline was still
	  available.

Wed Dec 05 14:47:32 2001  Carlos O'Ryan  <coryan@uci.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp:
	  Removed CORBA_Handler.* and CORBA_Ref.* classes from the project
	  files.

Wed Dec  5 16:38:31 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/SString_Test.cpp:
	* examples/Misc/test_sstring.cpp (main): Changed from ACE_WString
	  to ACE_NS_WString so we can still initialize the test string